--- a/style.css
+++ b/style.css
@@ -164,7 +164,9 @@ border-color: rgb(115, 171, 223); */
     font-size: 12px;
     margin: 15px;
 }
-
+#edevlet{
+    display: "";
+}
 #eimza{
     display: none;
 }
